fix: improve responsiveness on narrow screens

--- a/Mini Project/Weather-App/style.css
+++ b/Mini Project/Weather-App/style.css
@@ -102,7 +102,7 @@ body{
     display: none;
 }
 
-@media (max-width:400px)
+@media (max-width:500px)
 {
     .card{
           padding: 40px 10px;
@@ -110,13 +110,14 @@ body{
 
     .search input{
     color: #555;
-    padding: 10px 20px;
-    margin-right: 10px;
+    padding: 10px 10px;
+    margin-right: 5px;
     font-size: 16px;
+    height: 50px;
 }
 
 .humidity,.wind{
-    font-size: 20px;
+    font-size: 15px;
 }
 .details{
     padding: 0 5px;
@@ -125,6 +126,22 @@ body{
     width: 150px;
 }
 .weather h2{
-    font-size: 40px;
+    font-size: 30px;
+}
+.search button{
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    position: relative;
+}
+.col img{
+    width: 30px;
+    margin-right:10px;
+}
+.search button img{
+    width: 14px;
+    position: absolute;
+    top: 19px;
+    right:19px;
 }
 }
